--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#0b0f19" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Augments list | インフィニタム SHIP 4 JP</title>
+    <title>インフィニタム SHIP 4 JP</title>
 
   </head>
   <body class="bg-gray-900 text-gray-100">
